--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -129,7 +129,28 @@ year = {2017}
     url = "https://vision.in.tum.de/data/datasets/mono-dataset",
     howpublished = "\url{https://vision.in.tum.de/data/datasets/mono-dataset}",
     note = "[Online]"
-  }  
+  }
   
+@misc{BagFromImages,
+    author = "{Raul Mur-Artal}",
+    title = "BagFromImages",
+    url = "https://github.com/raulmur/BagFromImages",
+    howpublished = "\url{https://github.com/raulmur/BagFromImages}",
+    note = "[Online]"
+  }
+    
+@misc{evo,
+    author = "{Michael Grupp}",
+    title = "evo",
+    url = "https://michaelgrupp.github.io/evo/",
+    howpublished = "\url{https://michaelgrupp.github.io/evo/}",
+    note = "[Online]"
+  }
   
-
+@misc{tum_evo,
+    author = "{TUM Computer Vision Group}",
+    title = "Matlab evaluation code",
+    url = "https://github.com/tum-vision/mono_dataset_code",
+    howpublished = "\url{https://github.com/tum-vision/mono_dataset_code}",
+    note = "[Online]"
+  }
