--- a/Rešerše/reserse.tex
+++ b/Rešerše/reserse.tex
@@ -86,8 +86,9 @@ Rád bych poděkoval Ing. Petru Neduchalovi za odborné vedení bakalářské pr
 
 \newpage
 \subsection*{Abstrakt}
-TODO
+Práce se zabývá formulací úlohy Simultánní lokalizace a mapování, zvláště se zaměřuje na monokulární přímé metody řešící tuto úlohu. Popisuje základy od pravděpodobnostní definice, přes graph SLAM až po vizuální SLAM. V práci je popsána implementace čtyř vybraných přímých metod, jejich otestování na reálných datech a vyhodnocení těchto experimentů. 
 
+\noindent
 \textbf{Klíčová slova:} 
 
 \subsection*{Abstract}
