--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -154,3 +154,41 @@ year = {2017}
     howpublished = "\url{https://github.com/tum-vision/mono_dataset_code}",
     note = "[Online]"
   }
+  
+@inproceedings{gauss-newton,
+author = {Yan, Junlin and Tiberius, C.C.J.M. and Bellusci, G and Janssen, Gerard},
+year = {2008},
+month = {06},
+pages = {660 - 670},
+title = {Feasibility of Gauss-Newton method for indoor positioning},
+booktitle = {Feasibility of Gauss-Newton method for indoor positioning},
+isbn = {978-1-4244-1536-6},
+doi = {10.1109/PLANS.2008.4569986}
+}
+
+@inproceedings{monoslam,
+ author = {Davison, Andrew J.},
+ title = {Real-Time Simultaneous Localisation and Mapping with a Single Camera},
+ booktitle = {Proceedings of the Ninth IEEE International Conference on Computer Vision - Volume 2},
+ series = {ICCV '03},
+ year = {2003},
+ isbn = {0-7695-1950-4},
+ pages = {1403--},
+ url = {http://dl.acm.org/citation.cfm?id=946247.946734},
+ acmid = {946734},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+@INPROCEEDINGS{ptam,
+ author={G. {Klein} and D. {Murray}},
+ booktitle={2007 6th IEEE and ACM International Symposium on Mixed and Augmented Reality},
+ title={Parallel Tracking and Mapping for Small AR Workspaces},
+ year={2007},
+ volume={},
+ number={},
+ pages={225-234},
+ doi={10.1109/ISMAR.2007.4538852},
+ ISSN={},
+ month={Nov}
+}
