--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -131,30 +131,6 @@ year = {2017}
     note = "[Online]"
   }
   
-@misc{BagFromImages,
-    author = "{Raul Mur-Artal}",
-    title = "BagFromImages",
-    url = "https://github.com/raulmur/BagFromImages",
-    howpublished = "\url{https://github.com/raulmur/BagFromImages}",
-    note = "[Online]"
-  }
-    
-@misc{evo,
-    author = "{Michael Grupp}",
-    title = "evo",
-    url = "https://michaelgrupp.github.io/evo/",
-    howpublished = "\url{https://michaelgrupp.github.io/evo/}",
-    note = "[Online]"
-  }
-  
-@misc{tum_evo,
-    author = "{TUM Computer Vision Group}",
-    title = "Matlab evaluation code",
-    url = "https://github.com/tum-vision/mono_dataset_code",
-    howpublished = "\url{https://github.com/tum-vision/mono_dataset_code}",
-    note = "[Online]"
-  }
-  
 @inproceedings{gauss-newton,
 author = {Yan, Junlin and Tiberius, C.C.J.M. and Bellusci, G and Janssen, Gerard},
 year = {2008},
@@ -177,7 +153,7 @@ doi = {10.1109/PLANS.2008.4569986}
  url = {http://dl.acm.org/citation.cfm?id=946247.946734},
  acmid = {946734},
  publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
+ address = {Washington, DC, USA}
 } 
 
 @INPROCEEDINGS{ptam,
@@ -192,3 +168,16 @@ doi = {10.1109/PLANS.2008.4569986}
  ISSN={},
  month={Nov}
 }
+
+@article{benchmark,
+  author    = {Jakob Engel and
+               Vladyslav C. Usenko and
+               Daniel Cremers},
+  title     = {A Photometrically Calibrated Benchmark For Monocular Visual Odometry},
+  journal   = {CoRR},
+  volume    = {abs/1607.02555},
+  year      = {2016},
+  archivePrefix = {arXiv},
+  eprint    = {1607.02555},
+}
+
